--- a/Client/webapp/src/app/registration/registration.component.html
+++ b/Client/webapp/src/app/registration/registration.component.html
@@ -1,1 +1,47 @@
-<p>registration works!</p>
+<section id="registrationPage">
+    <div class="container p-5">
+        <div class="row mt-5">
+            <div class="col-lg-4 offset-lg-4">
+                <app-message></app-message>
+                <div class="card bg-light">
+                    <div class="card-body">
+                        <h4 class="text-center">Registration</h4>
+                        <hr>
+                        <form>
+                            <div class="form-group">
+                                <label for="" class="form-control-label">User Name</label>
+                                <input type="text" name="username" class="form-control" [(ngModel)]="username">
+                            </div>
+                            <div class="form-group">
+                                <label for="" class="form-control-label">First Name</label>
+                                <input type="text" name="first_name" class="form-control" [(ngModel)]="first_name">
+                            </div>
+                            <div class="form-group">
+                                <label for="" class="form-control-label">Last Name</label>
+                                <input type="text" name="last_name" class="form-control" [(ngModel)]="last_name">
+                            </div>
+                            <div class="form-group">
+                                <label for="" class="form-control-label">Email</label>
+                                <input type="text" name="email" class="form-control" [(ngModel)]="email">
+                            </div>
+                            <div class="form-group">
+                                <label for="" class="form-control-label">Password</label>
+                                <input type="password" name="password" class="form-control" [(ngModel)]="password">
+                            </div>
+                            <div class="form-group">
+                                <label for="" class="form-control-label">Confirm Password</label>
+                                <input type="password" name="password1" class="form-control" [(ngModel)]="password1">
+                            </div>
+                            <div class="form-check">
+                                <label for="" class="form-control-label">
+                                    <input type="checkbox" name="isSeller" class="form-check-input" [(ngModel)]="is isSeller"/> Registre as a seller
+                                </label>
+                            </div>
+                            <button type="button" class="btn btn-primary btn-block" (click)="register()" [disabled]="btnDisabled">Register</button>
+                        </form>
+                    </div>
+                </div>
+            </div> 
+        </div>
+    </div>
+</section>
