fixed issues on ui 1st phase

--- a/Client/webapp/src/app/registration/registration.component.html
+++ b/Client/webapp/src/app/registration/registration.component.html
@@ -34,7 +34,7 @@
                             </div>
                             <div class="form-check">
                                 <label for="" class="form-control-label">
-                                    <input type="checkbox" name="isSeller" class="form-check-input" [(ngModel)]="is isSeller"/> Registre as a seller
+                                    <input type="checkbox" name="isSeller" class="form-check-input" [(ngModel)]="isSeller"/> Registre as a seller
                                 </label>
                             </div>
                             <button type="button" class="btn btn-primary btn-block" (click)="register()" [disabled]="btnDisabled">Register</button>
