--- a/Client/webapp/src/app/app.component.html
+++ b/Client/webapp/src/app/app.component.html
@@ -8,7 +8,7 @@
     </button>
     <div [ngbCollapse]="isCollapsed" style="align-items: left; margin-left: 50px;" class="collapse navbar-collapse flex-column" id="navbarNav">
       <div class="input-group w-75">
-        <input type="text" name="search" class="form-control" [(ngModel)]="searchTearm" (keyup.enter)="search()">
+        <input type="text" name="search" class="form-control" [(ngModel)]="searchTerm" (keyup.enter)="search()">
         <span id="sarchBtn" class="bg-warning" (click)="search()">
           <i class="fa-search"></i>
         </span>
