--- a/Client/webapp/src/app/message/message.component.html
+++ b/Client/webapp/src/app/message/message.component.html
@@ -1,5 +1,5 @@
 <p *ngIf="data.message">
-    <!-- <ngb-alert [type]="data.messageType" [dismissible]="false">
+    <ngb-alert [type]="data.messageType" [dismissible]="false">
         {{data.message}}
-    </ngb-alert> -->
+    </ngb-alert>
 </p>
