--- a/Client/webapp/src/app/settings/settings.component.html
+++ b/Client/webapp/src/app/settings/settings.component.html
@@ -9,6 +9,7 @@
             </div>
         </div>
         <div *ngIf="currentSettings" class="card bg-light">
+            <div class="card-body">
             <form>
                 <div class="form-group">
                     <label for="first_name" class="form-control-label">First Name</label>
@@ -35,7 +36,9 @@
                     <label for="password" class="form-control-label">Confirm Password</label>
                     <input type="password" name="pwdConfirm" class="form-control" [(ngModel)]="currentSettings.pwdConfirm">
                 </div>
+                <button type="button" class="btn btn-danger" (click)="update()" [disabled]="btnDisabled">Update Profile</button>
             </form>
+        </div>
         </div>
     </div>
 </section>
