--- a/Client/webapp/src/app/categories/categories.component.html
+++ b/Client/webapp/src/app/categories/categories.component.html
@@ -12,6 +12,20 @@
             <a *ngFor="let category of categories" routerLink="categories/{{category._id}}" class="list-group-item list-group-item-action">
             {{category.name}}
             </a>
+            <hr style="margin-top:15rem">
+            <div class="card bg-light mt-5">
+                <div class="card-body">
+                    <h4 class="card-title">Add New Category</h4>
+                    <hr>
+                    <div class="form">
+                        <div class="form-group">
+                            <label for="category">Category</label>
+                            <input type="text" name="newCategory" class="form-control" [(ngModel)]="newCategory">
+                        </div>
+                        <button type="button" class="btn btn-info" (click)="addCategory()" [disabled]="btnDisabled">Add Category</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </section>
