=create display all my products page

--- a/Client/webapp/src/app/profile/profile.component.html
+++ b/Client/webapp/src/app/profile/profile.component.html
@@ -30,7 +30,7 @@
                             <a routerLink="/profile/postproduct" class="btn btn-outline-success btn-block">Post Product For Sale</a>
                         </div>
                         <div class="col-md-6 ">
-                            <a routerLink="/profile/postproduct" class="btn btn-outline-info btn-block">My Products</a>
+                            <a routerLink="/profile/myproducts" class="btn btn-outline-info btn-block">My Products</a>
                         </div>
                     </div>
                 </div>
