--- a/Client/webapp/src/app/post-product/post-product.component.html
+++ b/Client/webapp/src/app/post-product/post-product.component.html
@@ -28,7 +28,7 @@
                         </select>
                     </div>
                     <div class="form-group">
-                        <label for="description" class="form-control-label">Price</label>
+                        <label for="description" class="form-control-label">Description</label>
                         <textarea class="form-control" name="description" rows="5" [(ngModel)]="product.description"></textarea>
                     </div>
                     <div class="form-group">
