--- a/Client/webapp/src/app/my-products/my-products.component.html
+++ b/Client/webapp/src/app/my-products/my-products.component.html
@@ -27,12 +27,12 @@
                             <h5>
                                 <a routerLink="/product/{{product.id}}">{{product.title}}</a>
                                 <p class="m-0">
-                                    <small class="text-muted"></small>
+                                    <small class="text-muted">{{product.category.name}}</small>
                                 </p>
                             </h5>
                         </div>
                         <div class="col-2 col-md-2">
-                            <h6 class="font-weight-bold text-danger">Rs. {{product.price}}</h6>
+                            <h6 class="font-weight-bold text-danger">{{product.price | currency}}</h6>
                         </div>
                     </div>
                 </div>
