--- a/Client/webapp/src/app/my-products/my-products.component.html
+++ b/Client/webapp/src/app/my-products/my-products.component.html
@@ -6,8 +6,8 @@
                 <i class="fa fa-spinner fa-spin"></i>
             </h1>
         </div>
-        <!-- <h3 *ngIf="products && products.lenght==0" class="display-3 text-center mt-5">Products is empty</h3> -->
-        <div *ngIf="products " class="row">
+        <!-- <h3 *ngIf="products && this.products.lenght==0" class="display-3 text-center mt-5">Products is empty</h3> -->
+        <div *ngIf="products" class="row">
             <div class="col">
                 <h4 class="display-4">My Products</h4>
                 <div class="row">
