--- a/Client/webapp/src/app/product/product.component.html
+++ b/Client/webapp/src/app/product/product.component.html
@@ -22,7 +22,9 @@
                                 <small class="text-muted">by {{product.category.name}}</small>
                             </p>
                         </div>
-                        <div class="col-6"></div>
+                        <div class="col-6">
+                            <ngb-rating [(rate)]="product.averageRating" [starTemplate]="t" [readonly]=true max="5"></ngb-rating>
+                        </div>
                     </div>
                     <hr>
                     <p class="lead">{{product.description}}</p>
@@ -31,6 +33,50 @@
                     <div class="card bg-light">
                         <div class="card-body">
                             <h5 class="card-title">Price {{product.price|currency}}</h5>
+                            <br>
+                            <br>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="mt-5 ml-lg-5">
+                    <h4>Reviews</h4>
+                    <hr>
+                    <div class="reviews">
+                        <div *ngFor="let review of product.reviews" class="review">
+                            <div class="p-3">
+                                <img [src]="review.owner.photo" alt="poster" width="75px" class="rounded-circle">
+                                <p class="lead d-inline ml-3">{{review.owner.first_name}} {{review.owner.last_name}}</p>
+                                <br>
+                                <br>
+                                <ngb-rating [(rate)]="review.rating" [starTemplate]="t" [readonly]="true" max="5"></ngb-rating>
+                                <p class="ml-2 d-inline font-weight-bold">{{review.title}}</p>
+                                <p class="mt-3">{{review.description}}</p>
+                            </div>
+                            <hr>
+                        </div>
+                        <div class="card bg-light mt-5">
+                            <div class="card-body">
+                                <h4 class="card-title">Add a Review</h4>
+                                <hr>
+                                <div class="form">
+                                    <div class="form-group">
+                                        <label for="title">Title</label>
+                                        <input type="text" name="title" id="title" class="form-control" [(ngModel)]="myReview.title">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="description">Description</label>
+                                        <input type="text" name="description" id="description" class="form-control" [(ngModel)]="myReview.description">
+                                    </div>
+                                    <label for="">Rating</label>
+                                    <br>
+                                    <ngb-rating [(rate)]="myReview.rating" [starTemplate]="t" [readonly]="false" max="5"></ngb-rating>
+                                    <br>
+                                    <br>
+                                    <button type="button" class="btn btn-info" (click)="postReview()" [disabled]="btnDisabled">Post Review</button>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -38,3 +84,11 @@
         </div>
     </div>
 </section>
+
+<ng-template #t let-fill="fill">
+    <span *ngIf="fill===100" class="star full">&#9733;</span>
+    <span *ngIf="fill===0" class="star">&#9733;</span>
+    <span *ngIf="fill<100 && fill>0" class="star">
+        <span class="half" [style.width.%]="fill">&#9733;</span>&#9733;
+    </span>
+</ng-template>
